# generators/java/spring-web/expected-server/src/main/java/com/example/routes/SimpleHandlerAdapter.java
@@ -22,6 +22,8 @@ public class SimpleHandlerAdapter implements MatchingHandlerAdapter {
     private static final PathPattern pathPattern0 = PathPatternParser.defaultInstance.parse("/path1");
     private static final PathPattern pathPattern1 = PathPatternParser.defaultInstance.parse("/path2/{id}");
     private static final PathPattern pathPattern2 = PathPatternParser.defaultInstance.parse("/path3");
+    private static final PathPattern pathPattern3 = PathPatternParser.defaultInstance.parse("/path4");
+    private static final PathPattern pathPattern4 = PathPatternParser.defaultInstance.parse("/path5");
 
     private final String baseUrl;
     private final com.example.routes.SimpleOperations operations;
@@ -54,26 +56,24 @@ public class SimpleHandlerAdapter implements MatchingHandlerAdapter {
             if ("POST".equals(request.getMethod())) {
 
 
-                com.example.dto.Dto requestBodyDto;
                 String contentType = request.getContentType();
                 MediaType mediaType = MediaType.parseMediaType(contentType);
-                if (mediaType.equalsTypeAndSubtype(MediaType.APPLICATION_JSON)) {
-                    JsonNode jsonNode = objectMapper.readTree(request.getInputStream());
-                    requestBodyDto = com.example.routes.DtoConverter.parse(jsonNode);
-                } else {
+                if (!mediaType.equalsTypeAndSubtype(MediaType.parseMediaType("application/json"))) {
                     throw new UnsupportedOperationException(contentType);
                 }
+                JsonNode jsonNode = objectMapper.readTree(request.getInputStream());
+                com.example.dto.Dto requestBodyDto = com.example.routes.DtoConverter.parse(jsonNode);
+                response.setStatus(200);
+                response.setContentType("application/json");
                 java.lang.String responseBody = operations.simplePost(
                         requestBodyDto
                 );
-                response.setContentType("application/json");
                 JsonGenerator jsonGenerator = objectMapper.createGenerator(response.getOutputStream());
                 List<? extends ValidationError> validationErrors = io.github.fomin.oasgen.StringConverter.write(jsonGenerator, responseBody);
                 jsonGenerator.close();
                 if (!validationErrors.isEmpty()) {
                     throw new ValidationException(validationErrors);
                 }
-                response.setStatus(200);
                 return null;
             }
         }
@@ -90,20 +90,21 @@ public class SimpleHandlerAdapter implements MatchingHandlerAdapter {
                 String param3Str = request.getHeader("param3");
                 java.time.LocalDate param3 = param3Str != null ? java.time.LocalDate.parse(param3Str) : null;
 
+
+                response.setStatus(200);
+                response.setContentType("application/json");
                 com.example.dto.Dto responseBody = operations.simpleGet(
                         param0,
                         param1,
                         param2,
                         param3
                 );
-                response.setContentType("application/json");
                 JsonGenerator jsonGenerator = objectMapper.createGenerator(response.getOutputStream());
                 List<? extends ValidationError> validationErrors = com.example.routes.DtoConverter.write(jsonGenerator, responseBody);
                 jsonGenerator.close();
                 if (!validationErrors.isEmpty()) {
                     throw new ValidationException(validationErrors);
                 }
-                response.setStatus(200);
                 return null;
             }
         }
@@ -114,11 +115,49 @@ public class SimpleHandlerAdapter implements MatchingHandlerAdapter {
                 String param0Str = request.getParameter("param1");
                 java.time.LocalDate param0 = param0Str != null ? java.time.LocalDate.parse(param0Str) : null;
 
+
+                response.setStatus(200);
+
                 operations.testNullableParameter(
                         param0
                 );
 
+                return null;
+            }
+        }
+        PathPattern.PathMatchInfo pathMatchInfo3 = pathPattern3.matchAndExtract(pathContainer);
+        if (pathMatchInfo3 != null) {
+            if ("GET".equals(request.getMethod())) {
+
+
+
+
                 response.setStatus(200);
+                response.setContentType("application/octet-stream");
+                operations.returnOctetStream(
+                        response.getOutputStream()
+                );
+
+                return null;
+            }
+        }
+        PathPattern.PathMatchInfo pathMatchInfo4 = pathPattern4.matchAndExtract(pathContainer);
+        if (pathMatchInfo4 != null) {
+            if ("POST".equals(request.getMethod())) {
+
+
+                String contentType = request.getContentType();
+                MediaType mediaType = MediaType.parseMediaType(contentType);
+                if (!mediaType.equalsTypeAndSubtype(MediaType.parseMediaType("application/octet-stream"))) {
+                    throw new UnsupportedOperationException(contentType);
+                }
+
+                response.setStatus(200);
+
+                operations.sendOctetStream(
+                        request.getInputStream()
+                );
+
                 return null;
             }
         }
@@ -142,6 +181,8 @@ public class SimpleHandlerAdapter implements MatchingHandlerAdapter {
         PathContainer pathContainer = RequestPath.parse(request.getServletPath(), baseUrl).pathWithinApplication();
         return pathPattern0.matches(pathContainer)
                 || pathPattern1.matches(pathContainer)
-                || pathPattern2.matches(pathContainer);
+                || pathPattern2.matches(pathContainer)
+                || pathPattern3.matches(pathContainer)
+                || pathPattern4.matches(pathContainer);
     }
 }
